# AgentHub

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  INTERVIEW_PREP.md  PROJECT_MANUAL.md  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: settings.yaml
docker/: Dockerfile.backend  Dockerfile.frontend  docker-compose.yml
docs/: ARCHITECTURE.md
src/: __init__.py
src/adapters/: __init__.py  base.py  claude_adapter.py  codex_adapter.py  registry.py
src/api/: __init__.py  app.py  dependencies.py  middleware.py
src/api/routes/: __init__.py  chat.py  schemas.py  sessions.py
src/core/: __init__.py  config.py  message_bus.py  schema.py  session.py
src/orchestrator/: __init__.py  agent_router.py  orchestrator.py  task_parser.py
src/repository/: __init__.py  base.py  sqlite_repository.py
src/tools/: __init__.py  deploy.py  diff_viewer.py  preview.py
src/ui/: __init__.py  api_client.py  app.py
tests/: test_adapters.py  test_api.py  test_config.py  test_message_bus.py  test_orchestrator.py  test_repository.py  test_schema.py  test_session.py  test_tools.py  test_ui_client.py
