[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agenthub"]

[project]
name = "agenthub"
version = "0.1.0"
description = "AgentHub - Multi-Agent Collaboration Platform with IM-style chat"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "AgentHub Team" }]
dependencies = [
    # --- Data Models ---
    "pydantic>=2.0",
    "pydantic-settings>=2.0",

    # --- API Server ---
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sse-starlette>=2.0",

    # --- Frontend ---
    "streamlit>=1.35.0",

    # --- Networking ---
    "httpx>=0.27.0",
    "websockets>=12.0",

    # --- Config & YAML ---
    "pyyaml>=6.0",

    # --- Storage ---
    "aiosqlite>=0.20.0",

    # --- Utilities ---
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0",
    "httpx>=0.27.0",
    "black>=24.0",
    "ruff>=0.5.0",
    "mypy>=1.10",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = ["-v", "--tb=short"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
